--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -187,7 +187,7 @@
                         {{{ content }}}
                         <div id="giscus-container"></div>
                         <footer class="page-footer">
-                            <span>© 2021-2022 | <a href="https://imroc.cc">roc</a> 保留所有权利 | <a href="https://beian.miit.gov.cn/">蜀ICP备2021009081号-1</a></span>
+                            <span>© 2019-2022 | <a href="https://github.com/chai2010/go-ast-book">柴树杉、史斌、丁尔男</a> 保留所有权利</span>
                         </footer>
                     </main>
 
